# flowkeeper

./: AUDIT-REPORT.md  CLAUDE.md  DEMO-VIDEO-SCRIPT.md  FEATURES.md  LAUNCH-POSTS.md  README.md  SPECLOCK-INSTRUCTIONS.md  VIRAL-KIT.md  demo-v5.mjs  devto-article.md  devto-publish.html  manifest.json  mcpservers-submit.html  package-lock.json  package.json  speclock-replies.html
.smithery/shttp/: manifest.json  module.js  module.js.map
docs/: hall-of-fame.html  index.html  sitemap.xml
docs/blog/: ai-coding-safety.html  ai-pre-commit-hook-2026.html  anthropic-mcp-registry-tools.html  claude-md-not-working.html  cursorrules-enforcement.html  feed.xml  hooks-vs-rules-files.html  index.html  mcp-constraint-engine.html  vibe-coding-safety.html
speclock-py/: pyproject.toml
speclock-py/speclock/: __init__.py  brain.py  cli.py  client.py  constraints.py  core.py
speclock-py/tests/: test_constraints.py
src/cli/: index.js
src/core/: code-graph.js  compliance.js  conflict.js  context.js  diff-analyzer.js  diff-parser.js  enforcer.js  engine.js  git.js  guardian.js  hooks.js  llm-checker.js  llm-provider.js  lock-author.js  memory.js  patch-gateway.js  pre-commit-semantic.js  replay.js  rules-sync.js  semantics.js  sessions.js  spec-compiler.js  storage.js  telemetry.js  templates.js  (+2 more)
tests/: adversarial-conflict.test.js  claude-regression-test.mjs  code-graph.test.js  compliance-export.test.js  diff-review.test.js  direct-mode-test.mjs  enforcement.test.js  init-from.test.mjs  john-vibecoder-journey.test.js  kimi-bolt-test-script.sh  patch-gateway.test.js  payment-salary-test.mjs  pii-export-test.mjs  pre-publish-gate.mjs  proxy-test.mjs  question-framing-test.mjs  sam-enterprise-journey.test.js  spec-compiler.test.js  stats.test.mjs  synonym-gaps.test.mjs  typed-constraints.test.js
(+9 files in other folders)
