[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speclock"
version = "5.0.0"
description = "AI Constraint Engine for Autonomous Systems Governance — enforce safety constraints on robots, vehicles, trading systems, and medical devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sandeep Roy", email = "sgroy10@gmail.com"},
]
keywords = [
    "ai", "constraints", "safety", "robotics", "ros2", "autonomous",
    "governance", "enforcement", "mcp", "speclock", "trading", "medical",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
ros2 = ["rclpy"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/sgroy10/speclock"
Documentation = "https://sgroy10.github.io/speclock/"
Repository = "https://github.com/sgroy10/speclock"
Issues = "https://github.com/sgroy10/speclock/issues"

[project.scripts]
speclock-py = "speclock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["speclock*"]
